[tool.poetry]
name = "cabal"
version = "0.1.0"
description = "Backend for Cabal project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyramid = "^1.10.4"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"
sapp = "^0.4"
gunicorn = "^20.0.4"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
waitress = "^1.4.4"
ipython = "^7.16.1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
