[tool.poetry]
name = "cabal"
version = "0.1.0"
description = "Backend for Cabal project"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pyramid = "^1.10.4"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"
sapp = "^0.4"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
psycopg2 = "^2.8.5"
colorama = "^0.4.3"
paste = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
ipython = "^7.16.1"
ipdb = "^0.13.3"

[tool.isort]
line_length = 120
known_first_party = "adapap"
multi_line_output=3
sections = [ "FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_single_line = true

[tool.black]
line_length = 120
target-version = [ 'py38' ]
ignore = [ "W503", "W504" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


